--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 backend/node_modules
 backend/src/mongodb.js
+backend/src/mongoose.js
 frontend/node_modules
 frontend/src/axiosInstance.js
 cases.txt
